made final changes along with adding animation and keyframes to the project

--- a/8-Word-Carousel/index.html
+++ b/8-Word-Carousel/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="container">
-      <h2>I love <span>Coding</span></h2>
+      <h1>I love</h1>
     </div>
   </body>
 </html>
