made switzerland flag

--- a/12-FlagofSwitzerland/index.html
+++ b/12-FlagofSwitzerland/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="/12-FlagofSwitzerland/style.css" />
   </head>
   <body>
-    <div class="swiss-flag"></div>
+    <div class="swiss-flag">
+      <div class="plus-one"></div>
+      <div class="plus-two"></div>
+    </div>
   </body>
 </html>
