--- a/16-GithubProfileLayout/index.html
+++ b/16-GithubProfileLayout/index.html
@@ -19,7 +19,7 @@
         <h4>Salmanshaikh-dev</h4>
         <p>Frontend Developer studying BE computer Eng.</p>
 
-        <button class="btn-edit-profile">Edit profile</button>
+        <button class="btn-edit-profile" type="button">Edit profile</button>
       </div>
     </div>
   </body>
