--- a/20-AdjustableProgressBar/index.html
+++ b/20-AdjustableProgressBar/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="/20-AdjustableProgressBar/style.css">
 </head>
 <body>
-    <div>hi</div>
+    <div class="container">
+        <div class="progress-bar">
+            <div class="prog-status stage-1"></div>
+        </div>
+    </div>
 </body>
 </html>
