--- a/23-InstagramStoriesMenu/index.html
+++ b/23-InstagramStoriesMenu/index.html
@@ -1,35 +1,33 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+<!doctype html>
+<html>
+    <head>
+        <title></title>
+        <link rel="stylesheet" href="index.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,400;0,800;1,200&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="/23-InstagramStoriesMenu/style.css">
-    <title>Instagram Stories</title>
-</head>
-<body>
-    <ul class="stories-menu">
-        <li class="story new">
-          <div class="img-wrapper">
-                <img class="img" alt="profile-pic" src="/23-InstagramStoriesMenu/img/fishing.png"/>
-          </div>
-          <p>Julian</p>
-        </li>
-        <li class="story viewed live">
-          <div class="img-wrapper">
-              <img class="img" alt="profile-pic" src="/23-InstagramStoriesMenu/img/coding.png"/>
-          </div>
-          <p>Scrimdella</p>
-        </li>
-        <li class="story new">
-          <div class="img-wrapper">
-             <img class="img" alt="profile-pic" src="/23-InstagramStoriesMenu/img/swimming.png"/>
-          </div>
-          </div>
-          <p>Gumdrop</p>
-        </li>
-    </ul>
-</body>
+    </head>
+    <body>
+        <ul class="stories-menu">
+            <li class="story new">
+              <div class="img-wrapper">
+                    <img class="img" alt="profile-pic" src="scott-webb-unsplash.jpg"/>
+              </div>
+              <p>Julian</p>
+            </li>
+            <li class="story viewed live">
+              <div class="img-wrapper">
+                  <img class="img" alt="profile-pic" src="bundo-kim-unsplash.jpg"/>
+              </div>
+              <p>Scrimdella</p>
+            </li>
+            <li class="story new">
+              <div class="img-wrapper">
+                 <img class="img" alt="profile-pic" src="lidya-nada-unsplash.jpg"/>
+              </div>
+              </div>
+              <p>Gumdrop</p>
+            </li>
+        </ul>
+    </body>
 </html>
