--- a/23-InstagramStoriesMenu/index.html
+++ b/23-InstagramStoriesMenu/index.html
@@ -11,19 +11,19 @@
         <ul class="stories-menu">
             <li class="story new">
               <div class="img-wrapper">
-                    <img class="img" alt="profile-pic" src="scott-webb-unsplash.jpg"/>
+                    <img class="img" alt="profile-pic" src="/23-InstagramStoriesMenu/img/man.jpg"/>
               </div>
               <p>Julian</p>
             </li>
             <li class="story viewed live">
               <div class="img-wrapper">
-                  <img class="img" alt="profile-pic" src="bundo-kim-unsplash.jpg"/>
+                  <img class="img" alt="profile-pic" src="/23-InstagramStoriesMenu/img/cat.jpg"/>
               </div>
               <p>Scrimdella</p>
             </li>
             <li class="story new">
               <div class="img-wrapper">
-                 <img class="img" alt="profile-pic" src="lidya-nada-unsplash.jpg"/>
+                 <img class="img" alt="profile-pic" src="/23-InstagramStoriesMenu/img/fish.jpg"/>
               </div>
               </div>
               <p>Gumdrop</p>
