--- a/23-InstagramStoriesMenu/index.html
+++ b/23-InstagramStoriesMenu/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title></title>
-        <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="/23-InstagramStoriesMenu/style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,400;0,800;1,200&display=swap" rel="stylesheet">
