completed progress bar with css animations

--- a/24-AnimatedProgressBar/index.html
+++ b/24-AnimatedProgressBar/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Animated Progress-Bar</title>
-        <link rel="stylesheet" href="/24-AnimatedProgressBar/style.css">
-    </head>
-    <body>
-        <div class="progress-bar">
-            
-
-        </div>
-    </body>
-    </html>
+  <head>
+    <title>Animated Progress-Bar</title>
+    <link rel="stylesheet" href="/24-AnimatedProgressBar/style.css" />
+  </head>
+  <body>
+    <div class="container">
+      <div class="progress-bar">
+        <div class="progress-bar progress-status"></div>
+      </div>
+    </div>
+  </body>
+</html>
